<?xml version="1.0" encoding="utf-8"?>

<!--Main parent layout.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="1dp"
    android:padding="5dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.PlayerActivity">

    <!--Top Layout to show back button, app name and add to favorites.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="1dp"
        android:weightSum="5">

        <ImageButton
            android:id="@+id/back_btn_pa"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/fav_btn_pa"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_to_favorites"
            android:src="@drawable/ic_favorite_border"
            app:tint="@android:color/holo_red_dark" />

    </LinearLayout>

    <!--Music Album Art.-->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_album"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/ic_music_splash"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@android:color/holo_green_dark"
        app:strokeWidth="3dp" />

    <!--Song Name.-->
    <TextView
        android:id="@+id/song_name_pa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/song_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!--For seekbar.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_seekbar_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/start_tv"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seek_bar_pa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_seekbar_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/end_tv"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <!--Previous, Pause / Play and Next buttons.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/previous_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:clickable="true"
            android:contentDescription="@string/previous_song"
            android:focusable="true"
            android:src="@drawable/previous" />

        <ImageView
            android:id="@+id/play_pause_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="25dp"
            android:clickable="true"
            android:contentDescription="@string/play_pause_button"
            android:focusable="true"
            android:src="@drawable/play_button" />

        <ImageView
            android:id="@+id/next_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="25dp"
            android:clickable="true"
            android:contentDescription="@string/next_song"
            android:focusable="true"
            android:src="@drawable/next" />

    </LinearLayout>

    <!--Bottom buttons for Repeat, Equalizer, Timer and Share.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/repeat_btn_pa"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:src="@drawable/ic_repeat"
            app:tint="@color/pink" />

        <ImageButton
            android:id="@+id/equalizer_btn_pa"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/equalizer_btn"
            android:src="@drawable/ic_equalizer"
            app:tint="@color/pink" />

        <ImageButton
            android:id="@+id/timer_btn_pa"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/timer_btn"
            android:src="@drawable/ic_timer"
            app:tint="@color/pink" />

        <ImageButton
            android:id="@+id/share_btn_pa"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_btn"
            android:src="@drawable/ic_share"
            app:tint="@color/pink" />

    </LinearLayout>

    <!--Copyright credits to original author.-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/symphonicmix_made_by_akshat_sharma"/>

</LinearLayout>