<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:gravity="center"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_music"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@color/green"
        android:src="@drawable/ic_music_splash"
        app:shapeAppearanceOverlay="@style/curved" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toStartOf="@id/song_duration"
        android:layout_toEndOf="@id/img_music"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/song_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/song_name"
        android:layout_marginStart="6dp"
        android:layout_toStartOf="@id/song_duration"
        android:layout_toEndOf="@id/img_music"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/song_album"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/song_duration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:text="@string/start_tv" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/img_music"
        android:background="@color/black" />

</RelativeLayout>