<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/now_playing"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Include the custom toolbar -->
            <include layout="@layout/custom_toolbar" />

            <!--For buttons on top of the screen.-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="3">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shuffle_btn"
                    style="@style/CardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1.5"
                    android:backgroundTint="@android:color/holo_blue_bright"
                    android:clickable="true"
                    android:drawableTop="@drawable/ic_shuffle"
                    android:focusable="true"
                    android:singleLine="true"
                    android:text="@string/shuffle_btn"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fav_btn"
                    style="@style/CardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1.5"
                    android:backgroundTint="@android:color/holo_blue_bright"
                    android:clickable="true"
                    android:drawableTop="@drawable/ic_favorite"
                    android:focusable="true"
                    android:singleLine="true"
                    android:text="@string/favourites_btn"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/playlist_btn"
                    style="@style/CardView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:visibility="gone"
                    android:layout_weight="0"
                    android:backgroundTint="@android:color/holo_blue_bright"
                    android:clickable="true"
                    android:drawableTop="@drawable/ic_playlist"
                    android:focusable="true"
                    android:singleLine="true"
                    android:text="@string/playlist_btn"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/total_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="4dp"
                android:text="@string/total_songs"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/music_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:scrollbarThumbVertical="@drawable/ic_scrollbar"
                android:scrollbars="vertical"
                tools:listitem="@layout/music_view" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/now_playing"
            android:name="com.aksapps.symphonicmix.fragments.NowPlayingFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_main"
            tools:layout="@layout/fragment_now_playing" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>